--- a/src/UnitConverter.View.Wpf/App.xaml
+++ b/src/UnitConverter.View.Wpf/App.xaml
@@ -1,9 +1,13 @@
 ﻿<Application x:Class="UnitConverter.View.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UnitConverter.View.Wpf"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:UnitConverter.View.Wpf">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/StringResources.xaml"/>
+                <ResourceDictionary Source="Resources/StringResources.pt-BR.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
